force-app/main/default/objects/et4ae5__IndividualLink__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Individual Link Level Details</relationshipLabel>
    <relationshipName>Individual_Link_Level_Details</relationshipName>
    <type>Lookup</type>
</CustomField>