force-app/main/default/objects/et4ae5__IndividualLink__c/fields/No_Of_Clicks_Tracked__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Clicks_Tracked__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No. Of Clicks Tracked</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>