force-app/main/default/objects/et4ae5__IndividualLink__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Individual Link Level Details</relationshipLabel>
    <relationshipName>Individual_Link_Level_Details</relationshipName>
    <type>Lookup</type>
</CustomField>